✨| Adding multilingualism for the “ping” command

--- a/bot/src/database/languages/cs.json
+++ b/bot/src/database/languages/cs.json
@@ -28,6 +28,15 @@
       "cancelledEmbed": {
         "description": "Změna jazyka byla zrušena!"
       }
+    },
+    "ping": {
+      "pingingEmbed": {
+        "description": "<emoji> Výpočet ping..."
+      },
+      "pingEmbed": {
+        "Field1": "Latence webového socketu",
+        "Field2": "Zpoždění API"
+      }
     }
   }
 }
